Klassen erstellt und die Beschreibungen für die Klassen eingefügt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="NewGame">Neues Spiel</string>
     <string name="Exit">Exit</string>
+    <string name="title_activity_game">GameActivity</string>
+    <string name="title_activity_lobby">LobbyActivity</string>
 
 </resources>
