--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="NewGame">Neues Spiel</string>
     <string name="Exit">Exit</string>
     <string name="title_activity_game">GameActivity</string>
-    <string name="title_activity_lobby">LobbyActivity</string>  //Dies ist der Name dieser Aktivität
+    <string name="title_activity_lobby">LobbyActivity</string>  //Dies ist Aktivitätsname
 
 
 </resources>
