(re-)implemented basic client server functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="NewGame">Neues Spiel</string>
     <string name="Exit">Exit</string>
     <string name="title_activity_game">GameActivity</string>
-    <string name="title_activity_lobby">LobbyActivity</string>  //Dies ist Aktivitätsname
+    <string name="title_activity_lobby">LobbyActivity</string>
+    <string name="title_activity_server">ServerActivity</string>  //Dies ist Aktivitätsname
 
 
 </resources>
