--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="Exit">Exit</string>
     <string name="title_activity_game">GameActivity</string>
     <string name="title_activity_lobby">LobbyActivity</string>
-    <string name="title_activity_server">ServerActivity</string>  //Dies ist Aktivitätsname
+    <string name="title_activity_server">ServerActivity</string>
+    <string name="title_activity_result">ResultActivity</string>  //Dies ist Aktivitätsname
 
 
 </resources>
