--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="NewGame">Neues Spiel</string>
     <string name="Exit">Exit</string>
     <string name="title_activity_game">GameActivity</string>
-    <string name="title_activity_lobby">LobbyActivity</string>
-    <string name="title_activity_server">ServerActivity</string>
+    <string name="title_activity_client">Join a Game</string>
+    <string name="title_activity_server">Start a new Game</string>
     <string name="title_activity_result">ResultActivity</string>  //Dies ist Aktivitätsname
 
 
